--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Priority: extra
 Maintainer: Prabhu Ramachandran <prabhu@aero.iitb.ac.in> 
 Uploaders: Ramakrishnan Muthukrishnan <rkrishnan@debian.org>
 Build-Depends: debhelper (>= 5), xutils-dev, libgl1-mesa-dev, libxext-dev, libglu1-mesa-dev, xbitmaps
-Standards-Version: 3.7.2
+Standards-Version: 3.8.2
 Section: libs
 
 Package: libygl4-dev
@@ -11,7 +11,7 @@ Section: libdevel
 Architecture: any
 Depends: libygl4 (= ${binary:Version})
 Description: A library that emulates SGI's GL routines under X11
- Ygl is an X11 library that emulates the 2D routines of SGI's GL (sometimes 
+ Ygl is an graphics library that emulates the routines of SGI's GL (sometimes 
  called IRIS GL). Please note that GL is different from OpenGL.  Ygl is very 
  simple to use, and very fast. The 2D routines are built around the standard 
  X11 libraries and reported to be faster than GL itself.  This release will 
@@ -25,7 +25,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: A library that emulates SGI's GL routines under X11
- Ygl is an X11 library that emulates the 2D routines of SGI's GL (sometimes 
+ Ygl is an graphics library that emulates the routines of SGI's GL (sometimes 
  called IRIS GL). Please note that GL is different from OpenGL.  Ygl is very 
  simple to use, and very fast. The 2D routines are built around the standard 
  X11 libraries and reported to be faster than GL itself.  This release will 
