--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: ygl
 Priority: extra
-Maintainer: Prabhu Ramachandran <prabhu@aero.iitb.ac.in> 
-Uploaders: Ramakrishnan Muthukrishnan <rkrishnan@debian.org>
-Build-Depends: debhelper (>= 5), xutils-dev, libgl1-mesa-dev, libxext-dev, libglu1-mesa-dev, xbitmaps
+Maintainer: Debian QA Group <packages@qa.debian.org>
+Build-Depends: debhelper (>= 8), xutils-dev, libgl1-mesa-dev, libxext-dev, libglu1-mesa-dev, xbitmaps
 Standards-Version: 3.8.2
 Section: libs
 
