--- a/debian/rules
+++ b/debian/rules
@@ -1,105 +1,15 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+%:
+	dh $@
 
-# shared library versions, option 1
-version=4.2
-major=4
-# option 2, assuming the library is created as src/.libs/libfoo.so.2.0.5 or so
-#version=`ls src/.libs/lib*.so.* | \
-# awk '{if (match($$0,/[0-9]+\.[0-9]+\.[0-9]+$$/)) print substr($$0,RSTART)}'`
-#major=`ls src/.libs/lib*.so.* | \
-# awk '{if (match($$0,/\.so\.[0-9]+$$/)) print substr($$0,RSTART+4)}'`
+override_dh_auto_configure:
+	xmkmf -a
+	dh_auto_configure
 
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
-build: build-stamp
-build-stamp: configure-stamp 
-	dh_testdir
-
-	# Add here commands to compile the package.
-	xmkmf
-	$(MAKE)
-	# cd examples; xmkmf
-	# $(MAKE)
-	# cd ..
-
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
-	$(MAKE) clean
-
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/tmp
-	$(MAKE) DESTDIR=`pwd`/debian/tmp install
-
-	# install example directory
-	mkdir -p `pwd`/debian/tmp/usr/share/doc/libygl4-dev/examples
-	cp -ar `pwd`/examples/*.c  `pwd`/debian/tmp/usr/share/doc/libygl4-dev/examples
-	cp -ar `pwd`/examples/*.f  `pwd`/debian/tmp/usr/share/doc/libygl4-dev/examples
-	cp -ar `pwd`/examples/Imakefile  `pwd`/debian/tmp/usr/share/doc/libygl4-dev/examples
-	cp -ar `pwd`/examples/Makefile.std  `pwd`/debian/tmp/usr/share/doc/libygl4-dev/examples
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs Changes.html
-	dh_installdocs
-#	dh_installexamples
-	dh_install --sourcedir=debian/tmp
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-#	dh_installman
-	dh_link
-	dh_strip
-	dh_compress -X.c
-	dh_fixperms
-#	dh_perl
-#	dh_python
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+override_dh_installexamples:
+	cd examples && $(MAKE) clean && rm -f Makefile
+	dh_installexamples
