--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,19 @@
 Source: ygl
-Priority: extra
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper-compat (= 13), xutils-dev, libgl1-mesa-dev, libxext-dev, libglu1-mesa-dev, xbitmaps
-Standards-Version: 4.6.1
 Section: libs
+Priority: optional
+Build-Depends: debhelper-compat (= 13),
+               xutils-dev,
+               libgl1-mesa-dev,
+               libxext-dev,
+               libglu1-mesa-dev,
+               xbitmaps
+Standards-Version: 4.6.1
 Rules-Requires-Root: no
 
 Package: libygl4-dev
-Section: libdevel
 Architecture: any
+Section: libdevel
 Depends: libygl4 (= ${binary:Version})
 Description: A library that emulates SGI's GL routines under X11
  Ygl is an graphics library that emulates the routines of SGI's GL (sometimes 
@@ -21,9 +26,10 @@ Description: A library that emulates SGI's GL routines under X11
  This package provides the development files.
 
 Package: libygl4
-Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Section: libs
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
 Description: A library that emulates SGI's GL routines under X11
  Ygl is an graphics library that emulates the routines of SGI's GL (sometimes 
  called IRIS GL). Please note that GL is different from OpenGL.  Ygl is very 
@@ -33,4 +39,3 @@ Description: A library that emulates SGI's GL routines under X11
  therefore requires the use of the OpenGL libraries.
  . 
  This package provides the runtime library.
-
